# comp_inference

./: .gitignore  CMakeLists.txt  README.org  pyproject.toml  setup.py
comp_inference/: __init__.py  comp_inference.py  comp_infernece.py  compressed_model.py  embedding_triton.py  linear_triton.py  pytorch_runtime.py  rans_gguf.py  rans_saving.py  rans_triton.py  transposed_linear_triton.py  triton_gemm.py
comp_inference/encoders/: ans.py  rans_native.py
comp_inference/layers/: compressed_embedding.py  compressed_layer_norm.py  compressed_linear.py
comp_inference/utils/: dtype_enum.py  tied_embeddings.py
src/: python_bindings.cpp
src/cpp/: rans.hpp  rans_linear.hpp  wrapper.cpp  wrapper.hpp
src/cuda/: ans.cu  compressed_linear.cu  cuda_test.cu  kernels.cu  kernels.cuh  main.cu  rans.cuh  rans_host.cuh  rans_kernels.cuh  rans_linear_kernel.cuh  rans_ops.cu
tests/: analyze_safetensors.py  compressibility_test.py  discrepancy_test.py  nan_debug.py  plot_entropy_histograms.py  simulate_decompression.cpp  test_ans_encoder.py  test_compressed_embedding.py  test_compressed_layer_norm.py  test_compressed_linear.py  test_compressed_model.py  test_compressed_model_class.py  test_cuda_install.py  test_cuda_module.py  test_full_model_compression.py  test_full_model_rans.py  test_fused_model.py  test_mat_mul.py  test_minimal_compression.py  test_optimal_params.py  test_pytorch_diskoffloading.py  test_rans.py  test_rans_pytorch_runtime.py  test_reconstruction.py  test_simulate_decompression.py  test_split_k.py
